--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Vendors/SGPlatform"]
 	path = Vendors/SGPlatform
-url=git@github.com:libobjc/SGPlatform.git
+url=https://github.com/libobjc/SGPlatform.git
