--- a/.gitignore
+++ b/.gitignore
@@ -16,4 +16,5 @@ DerivedData
 *.xcuserstate
 .DS_Store
 framework/
-SGPlayer/Classes/Core/SGFFmpeg/FFmpeg-*
+SGPlayer/Classes/Core/SGFFmpeg/include
+SGPlayer/Classes/Core/SGFFmpeg/lib-*
