--- a/demo/demo-tvos/demo-tvos.xcodeproj/xcshareddata/xcschemes/demo-tvos.xcscheme
+++ b/demo/demo-tvos/demo-tvos.xcodeproj/xcshareddata/xcschemes/demo-tvos.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "9C6901F221901D3C00B546E3"
-               BuildableName = "demo-tvos.app"
+               BuildableName = "SGPlayer.app"
                BlueprintName = "demo-tvos"
                ReferencedContainer = "container:demo-tvos.xcodeproj">
             </BuildableReference>
@@ -33,7 +33,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "9C6901F221901D3C00B546E3"
-            BuildableName = "demo-tvos.app"
+            BuildableName = "SGPlayer.app"
             BlueprintName = "demo-tvos"
             ReferencedContainer = "container:demo-tvos.xcodeproj">
          </BuildableReference>
@@ -56,7 +56,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "9C6901F221901D3C00B546E3"
-            BuildableName = "demo-tvos.app"
+            BuildableName = "SGPlayer.app"
             BlueprintName = "demo-tvos"
             ReferencedContainer = "container:demo-tvos.xcodeproj">
          </BuildableReference>
@@ -75,7 +75,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "9C6901F221901D3C00B546E3"
-            BuildableName = "demo-tvos.app"
+            BuildableName = "SGPlayer.app"
             BlueprintName = "demo-tvos"
             ReferencedContainer = "container:demo-tvos.xcodeproj">
          </BuildableReference>
